--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
   <body>
     <div class="whole">
        <div class="topnav">
-         <a class="active" href="#">PITLIONS 2023</a>
+         <a class="active" href="#">PIT-LIONS 2023</a>
          <a href="https://m.me/team sab-ong">"TALK TO US</a>
           <a href="https://pitlions2023.live/register.php?refID=7062">INCO REGISTRATION</a>
   
        </div>
        <div class="serverone"><img class="svone" src="serverone.png"/>
+       <br>
         <a href="https://pitlions2023.live/" class="botton">LOG IN HERE</a>
         </div>
         <br>
         <div class="footer">
-         <div class="footer-div">copyright©2021TEAMLEGIT<br>
-POWER BY: TEAM YAKUZA.</div>
+         <div class="footer-div">copyright © Team_PitLions<br>
+POWER BY: Sabong Underground.</div>
          </div>
       </div>
   </body> 
