--- a/index.html
+++ b/index.html
@@ -6,22 +6,25 @@
     <title>teamyakuza</title>
   </head>
   <body>
-    <div class="whole">
-       <div class="topnav">
-         <a class="active" href="#">PIT-LIONS 2023</a>
-         <a href="https://m.me/team sab-ong">"TALK TO US</a>
-          <a href="https://pitlions2023.live/register.php?refID=7062">INCO REGISTRATION</a>
-  
-       </div>
-       <div class="serverone"><img class="svone" src="serverone.png"/>
-       <br>
-        <a href="https://pitlions2023.live/" class="botton">LOG IN HERE</a>
-        </div>
-        <br>
+  <div class="whole">
+    <div class="topnav">
+      <a class="active" href="#">PIT-LIONS 2023</a>
+      <a href="https://m.me/team sab-ong">"TALK TO US</a>
+      <a href="https://pitlions2023.live/register.php?refID=7062">INCO REGISTRATION</a>
+    </div>
+    <div class="box-one">
+      <div class="serverone"><img class="svone" src="servertwos.png"/><br><a href="https://pitlions2023.live/" class="botton">LOG IN 2023</a>
+      </div>
+      <div class="serverone"><img class="svone" src="serverones.png"/><br>
+           <a href="https://pitlions2023.live/" class="botton">LOG IN 2024</a>
+      </div>
+    </div>
+    <br>
         <div class="footer">
          <div class="footer-div">copyright © Team_PitLions<br>
-POWER BY: Sabong Underground.</div>
+           POWER BY: Sabong Underground.</div>
          </div>
-      </div>
+         
+  </div>
   </body> 
 </html>
