--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <div class="box-one">
       <div class="serverone"><img class="svone" src="servertwos.png"/><br><a href="https://pitlions2023.live/" class="botton">LOG IN 2023</a>
       </div>
-      
+      <div class="serverone"><img class="svone" src="serverones.png"/><br>
+           <a href="https://pitlions2023.live/" class="botton">LOG IN 2024</a>
+      </div>
     </div>
     <br>
     <br>
