--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <div class="topnav">
       <a class="active" href="#">PIT-LIONS 2023</a>
       <a href="https://m.me/teamevardone">"TALK TO US</a>
-      <a href="https://pitlions2023.live/register.php?refID=7062">INCO REGISTRATION</a>
+      <a href="https://pitlions2025.live">INCO REGISTRATION</a>
     </div>
     <div class="box-one">
-      <div class="serverone"><img class="svone" src="servertwos.png"/><br><a href="https://pitlions2023.live/" class="botton">LOG IN 2023</a>
+      <div class="serverone"><img class="svone" src="servertwos.png"/><br><a href="https://pitlions2025.live" class="botton">LOG IN 2023</a>
       </div>
       <div class="serverone"><img class="svone" src="serverones.png"/><br>
-           <a href="https://pitlions2023.live/" class="botton">LOG IN 2024</a>
+           <a href="https://pitlions2025.live" class="botton">LOG IN 2024</a>
       </div>
     </div>
     <br>
