--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
       <a href="https://m.me/teamevardone">"TALK TO US</a>
       <a href="https://pitlions2025.live">INCO REGISTRATION</a>
     </div>
+        <div class="box-one">
+      <div class="serverone"><a href="https://pitlions2025.live" class="botton">REGISTER HERE</a>
+      </div>
     <div class="box-one">
       <div class="serverone"><img class="svone" src="servertwos.png"/><br><a href="https://pitlions2025.live" class="botton">LOG IN 2023</a>
       </div>
+      
     </div>
     <br>
     <br>
