--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a href="https://pitlions2025.live">INCO REGISTRATION</a>
     </div>
         <div class="box-one">
-      <div class="serverone"><a href="https://pitlions2025.live" class="botton">REGISTER HERE</a>
+      <div class="serverone"><a href="https://pitlions2025.live/register.php?refID=6899" class="botton">REGISTER HERE</a>
       </div>
     <div class="box-one">
       <div class="serverone"><img class="svone" src="servertwos.png"/><br><a href="https://pitlions2025.live" class="botton">LOG IN 2023</a>
