--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <a href="https://pitlions2025.live">INCO REGISTRATION</a>
     </div>
         <div class="box-one">
-      <div class="serverone"><img class="svone" src="kamote.png"/><br><a href="https://pitlions2025.live/register.php?refID=6899" class="botton">REGISTERED HERE</a>
+      <div class="serverone"><img class="svone" src="kamote.png"/><br><a href="https://pitlions2023.live/index.php" class="botton">REGISTERED HERE</a>
       </div>
     <div class="box-one">
-      <div class="serverone"><img class="svone" src="servertwos.png"/><br><a href="https://pitlions2025.live" class="botton">LOG IN 2023</a>
+      <div class="serverone"><img class="svone" src="servertwos.png"/><br><a href="https://pitlions2023.live/index.php" class="botton">LOG IN 2023</a>
       </div>
       
     </div>
